--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "server": "json-server-auth --watch db.json --port 3001"
   },
   "dependencies": {
+    "@ant-design/cssinjs": "^1.16.0",
     "@types/node": "20.4.5",
     "@types/react": "18.2.16",
     "@types/react-dom": "18.2.7",
+    "antd": "^5.7.3",
     "autoprefixer": "10.4.14",
     "axios": "^1.4.0",
     "json-server-auth": "^2.1.0",
